<resources>
    <string name="app_name">InClass10</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="choosePassword">Choose Password</string>
    <string name="repeatPassword">Repeat Password</string>
</resources>
